28/10 

FRAN

- Añadidos al navbar del index tres links, los cuales llevan a las secciones de ésta misma. Ya se les ha asignado una estructura de css.
- Añadido también al index un div vacío con la sección de visita virtual, la cual queda pendiente. 
- El div de mala señal en la página de computación pasó de ser sticky a static, para que no acompañe al usuario en toda la página. 

MARCO

-Se añadio un arichivo js para darle la logica de tabs. Que es basicmaente cuando tocas un boton te aparece la info al lado.
-Se le agrego nuevo estilo en el css stylesCompu para la clase content-section
-Y en el html solo se vinculo el script "tabs.js" 

4/11
MARCO
Reorganizacion del proyecto, con un arreglo del link en el html de electrecidad

ROBERTH
- refactorización y actualización del css del index
- eliminación de todos los demás archivos de css

FRAN
- index.html fue llevado a root para que github pages pueda abrirlo
- Todos los problemas de enrutamiento ocasionados por la reorganización de carpetas fueron resueltas.  
- se separaron los archivos css en una hoja de estilos general para todas las páginas, y las hojas específicas de cada página o conjunto.
