@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/stylesGenerales.css">
-  <link rel="stylesheet" href="/css/stylesEspecs.css">
+  <link rel="stylesheet" href="../css/stylesGenerales.css">
+  <link rel="stylesheet" href="../css/stylesEspecs.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
   <title>Computación - E.T. N°29</title>
 </head>
@@ -14,8 +14,8 @@
   <nav class="barra-navegacion">
   <div class="contenedor-navegacion">
     <div class="logo">
-      <img src="/img/logoet29.png" alt="Logo Técnica 29" />
-      <a id = "linkInicio" href="/index.html">Escuela Técnica N°29<br>D.E. 6 Reconquista de Buenos Aires</a>
+      <img src="../img/logoet29.png" alt="Logo Técnica 29" />
+      <a id = "linkInicio" href="../index.html">Escuela Técnica N°29<br>D.E. 6 Reconquista de Buenos Aires</a>
     </div>
 
     <ul class="menu">
@@ -90,7 +90,7 @@
     <aside>
       <div class = "mala-señal">
         <p>Proyecto de Streaming</p>
-        <img src="/img/malasenal.jpg" alt="Mala señal">
+        <img src="../img/malasenal.jpg" alt="Mala señal">
         
         <a href="https://www.instagram.com/malasenal.29/" target="_blank" aria-label="Instagram">
           <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" viewBox="0 0 24 24" fill="currentColor">
@@ -143,6 +143,6 @@
     </p>
   </footer>
 
-  <script src="/js/tabs.js" defer></script>
+  <script src="../js/tabs.js" defer></script>
 </body>
 </html>
