@@ -10,7 +10,7 @@
 <body>
   <div>
     <img src="/img/logoet29.png" alt="Imagen principal">
-    <p>EN CONSTRUCCIÓN</p>
+    <p>EN CONSTRUCCIÓN... esta página no está en uso así que no sirve casi nada de lo que está vinculado</p>
   </div>
 </body>
 </html>
