@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mecánica - E.T. N°29</title>
-  <link rel="stylesheet" href="/css/stylesGenerales.css">
-  <link rel="stylesheet" href="/css/stylesEspecs.css">
+  <link rel="stylesheet" href="../css/stylesGenerales.css">
+  <link rel="stylesheet" href="../css/stylesEspecs.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 </head>
 
@@ -14,8 +14,8 @@
   <nav class="barra-navegacion">
   <div class="contenedor-navegacion">
     <div class="logo">
-      <img src="/img/logoet29.png" alt="Logo Técnica 29" />
-      <a id = "linkInicio" href="/index.html">Escuela Técnica N°29<br>D.E. 6 Reconquista de Buenos Aires</a>
+      <img src="../img/logoet29.png" alt="Logo Técnica 29" />
+      <a id = "linkInicio" href="../index.html">Escuela Técnica N°29<br>D.E. 6 Reconquista de Buenos Aires</a>
     </div>
 
     <ul class="menu">
@@ -43,7 +43,7 @@
 </nav>
 
   <main>
-    <img src="/img/logoet29.png" alt="Imagen principal">
+    <img src="../img/logoet29.png" alt="Imagen principal">
     <p>EN CONSTRUCCIÓN</p>
   </main>
 
