@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Técnica N°29 - Reconquista de Buenos Aires</title>
-  <link rel="stylesheet" href="/css/stylesIndex.css" />
+  <link rel="stylesheet" href="css/stylesIndex.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
-  <link rel="stylesheet" href="/css/stylesGenerales.css">
+  <link rel="stylesheet" href="css/stylesGenerales.css">
   
 </head>
 
@@ -15,7 +15,7 @@
   <nav class="barra-navegacion">
   <div class="contenedor-navegacion">
     <div class="logo">
-      <img src="/img/logoet29.png" alt="Logo Técnica 29" />
+      <img src="../img/logoet29.png" alt="Logo Técnica 29" />
       <a id = "linkInicio" href="index.html">Escuela Técnica N°29<br>D.E. 6 Reconquista de Buenos Aires</a>
     </div>
 
@@ -68,7 +68,7 @@
 
     <div class="contenedor-especialidades">
       <div class="tarjeta-especialidad">
-        <img src="/img/computacion.jpeg" alt="Computación" />
+        <img src="img/computacion.jpeg" alt="Computación" />
         <h3>Computación</h3>
         <p>
           Formación en programación, redes y hardware, integrando la tecnología
@@ -78,7 +78,7 @@
       </div>
 
       <div class="tarjeta-especialidad">
-        <img src="/img/electricidad.jpg" alt="Electricidad" />
+        <img src="img/electricidad.jpg" alt="Electricidad" />
         <h3>Electricidad</h3>
         <p>
           Capacitación en instalaciones, mantenimiento y proyectos eléctricos con
@@ -88,7 +88,7 @@
       </div>
 
       <div class="tarjeta-especialidad">
-        <img src="/img/meca.jpg" alt="Mecánica" />
+        <img src="img/meca.jpg" alt="Mecánica" />
         <h3>Mecánica</h3>
         <p>
           Diseño, operación y mantenimiento de sistemas mecánicos y herramientas
